# panoply

./: .gitignore  Cargo.toml  README.md  TODO.md
artwork/characters/: Blender.md  canine.blend  canine.glb  humanoid-female.glb  humanoid-male.blend  humanoid-male.glb  kreekin.blend  kreekin.glb  reshari.blend  reshari.glb  skeleton.blend  skeleton.glb  support-lib.blend  ursine.blend  ursine.glb  wasp.blend  wasp.glb
artwork/scenery/: blackout.blend  blackout.blend1  blackout.glb  camping.blend  camping.blend1  camping.glb  carpentry-dark.blend  carpentry-dark.blend1  carpentry-dark.glb  carpentry.blend  carpentry.blend1  cave-portal.blend  cave-portal.blend1  cave-portal.glb  cave.blend  cave.blend1  cave.glb  cottage.blend  cottage.blend1  cottage.glb  decorations.glb  empty.blend  hedge-walls.blend  hedge-walls.glb  ice-cave.blend  ice-cave.glb  iron-fence.blend  iron-fence.glb  marble-palace.blend  marble-palace.blend1  marble-palace.glb  palisade.blend  palisade.blend1  palisade.glb  refcube.blend  sepia-brick-house.blend  sepia-brick-house.glb  slate-roof.blend  slate-roof.blend1  slate-roof.glb  (+19 more)
artwork/textures/: cob-burst.kra  cobbles.kra  dirt.kra  moss.kra  puff1.kra  sandstone-diagonal-pavers.kra  snow.kra
artwork/vortex/: terrain-noise.vtx  water-sky.vtx  water-waves-2.vtx
assets/: terrain.tsh.cbor  world.locations.json
assets/characters/: canine.glb  dabori.glb  humanoid-armature.glb  humanoid-female.glb  humanoid-male.glb  kreekin.glb  reshari.glb  skeleton.glb  ursine.glb  wasp.glb
assets/exemplars/: camping.exem.json  cave-walls.exem.json  characters.exem.json  creature-parts.exem.json  floors.json  furnishings.exem.json  ice-cave-walls.exem.json  items.exem.json  marble-palace.exem.json  sepia-brick-house.exem.json  terrainfx.exem.json  wall-tiles.exem.json  walls-keep1.exem.json  walls-keep2.exem.json  weapons.exem.json
assets/realms/: holm-overland.realm.json  holm-underground.realm.json
assets/schematics/: books.scm.json  camping.scm.json  cave-walls.scm.json  characters.scm.json  floors.json  furnishings.scm.json  ice-cave-walls.scm.json  items.scm.json  marble-palace.scm.json  quest-items.scm.json  sepia-brick-house.scm.json  terrainfx.scm.json  wall-tiles.scm.json  walls-keep1.scm.json  walls-keep2.scm.json  weapons.scm.json
assets/shaderlib/: octaves.wgsl  snoise.wgsl  snoise_grad.wgsl
assets/shaders/: floor_noise.wgsl  outline.wgsl  terrain.wgsl
assets/terrain/: terrain.biomes.json  terrain.contours  terrain.groups.json
assets/textures/: dark-gritty-slate.vtx  noise1.vtx
crates/bevy_mod_preferences/: Cargo.toml
crates/panoply_exemplar/: Cargo.toml
docs/: Exemplars.md
schemas/: aspect.schema.json  exemplar.schema.json  guise.rng  guise.schema.json  meta.schema.json  schematic.schema.json  types.schema.json
src/: main.rs  msgpack_extension.rs  settings.rs
src/actors/: actor_aspect.rs  actor_instance.rs  mod.rs
src/diagnostics/: mod.rs
src/editor/: camera.rs  events.rs  exemplars.rs  mod.rs  modified_assets.rs  undo.rs  unsaved.rs  view.rs
src/fluid/: mod.rs  node_span.rs  plugin.rs  view.rs  view_root.rs
src/guise/: asset.rs  asset2.rs  coerce.rs  computed.rs  controller.rs  element.rs  element_style.rs  expr.rs  from_ast.rs  guise.pest  mod.rs  parser.rs  partial_style.rs  path.rs  plugin.rs  reconciler.rs  render_output.rs  renderable.rs  style.rs  template.rs  typed_expr.rs  view.rs  view_element.rs  view_root.rs
src/instancing/: instance.rs  layers.rs  mod.rs  model_loader.rs  plugin.rs
src/materials/: black.rs  flame.rs  flame.wgsl  flame_prepass.wgsl  floor.rs  floor_noisy.rs  floor_std.rs  mod.rs  outline.rs
src/meta/: mod.rs
src/models/: mod.rs
src/msgpack/: mod.rs
src/portals/: active_portal.rs  mod.rs  portal_aspect.rs
src/quill/: mod.rs  plugin.rs  view.rs  view_root.rs
src/random/: mod.rs  noise.rs  weighted_choice.rs  weighted_random.rs
src/reflect_types/: hex_color.rs  mod.rs
src/scenery/: floor_aspect.rs  floor_mesh.rs  floor_noise.rs  floor_region.rs  mod.rs  msgpack_extension.rs  precinct.rs  precinct_asset.rs  precinct_cache.rs  rle.rs  (+6 more)
(+373 files in other folders)
